--- a/index.html
+++ b/index.html
@@ -71,8 +71,6 @@
               <img src="./img/content/1.jpg">
               <img src="./img/content/5.jpg">
               <img src="./img/content/4.jpg">
-              <img src="./img/content/3.jpg">
-              <img src="./img/content/6.jpg">
               <img src="./img/content/7.jpg">
             </div>
         </section>
@@ -114,7 +112,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Airsoft Verein. Alle Rechte vorbehalten.</p>
+      <p>&copy; 2025 JOAK Airsoft. Alle Rechte vorbehalten.</p>
     </div>
   </footer>
   <script src="script.js"></script>
