--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
 
   <footer>
     <div class="container">
+      <div class="sponsor">
+        <h1>Sponsored by:</h1>
+        <a href="https://www.begadi.com/" target="_blank">
+        <img src="./img/sponsor.png" alt="Begadi Logo">
+      </a>
+      </div>
+    
       <p>&copy; 2025 JOAK Airsoft. Alle Rechte vorbehalten.</p>
     </div>
   </footer>
