--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <h2>Mehr unter:</p>
               <ul class="kontakt-links">
                 <li>
-                  <a href="https://www.youtube.com/@joakairsoft" target="_blank">
+                  <a href="https://www.youtube.com/@joakairsoft6400" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                       <path d="M23.498 6.186a2.992 2.992 0 00-2.108-2.118C19.273 3.5 12 3.5 12 3.5s-7.273 0-9.39.568A2.992 2.992 0 00.502 6.186C0 8.299 0 12 0 12s0 3.701.502 5.814a2.992 2.992 0 002.108 2.118c2.117.568 9.39.568 9.39.568s7.273 0 9.39-.568a2.992 2.992 0 002.108-2.118C24 15.701 24 12 24 12s0-3.701-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
                     </svg>
@@ -88,11 +88,19 @@
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/joakairsoft" target="_blank">
+                  <a href="https://www.instagram.com/joak.airsoft/" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                       <path d="M7 2C4.24 2 2 4.24 2 7v10c0 2.76 2.24 5 5 5h10c2.76 0 5-2.24 5-5V7c0-2.76-2.24-5-5-5H7zm10 2c1.65 0 3 1.35 3 3v10c0 1.65-1.35 3-3 3H7c-1.65 0-3-1.35-3-3V7c0-1.65 1.35-3 3-3h10zm-5 3a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm4.5-.5a1.5 1.5 0 110 3 1.5 1.5 0 010-3z"/>
                     </svg>
                     Instagram
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.facebook.com/profile.php?id=61577187784300 " target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                      <path d="M22 12c0-5.5228-4.4772-10-10-10S2 6.4772 2 12c0 4.991 3.657 9.1284 8.438 9.877V15.468h-2.54v-2.936h2.54v-2.24c0-2.507 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.773-1.63 1.563v1.912h2.773l-.443 2.936h-2.33v6.409C18.343 21.1284 22 16.991 22 12z"/>
+                    </svg>
+                    Facebook
                   </a>
                 </li>
                 <li>
